--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <link rel="stylesheet" href="css/style.css" />
     <script defer src="js/script.js"></script>
 
     <title>Api Practice</title>
   </head>
+
   <body>
     <div class="container">
-      <h1>Todo List</h1>
+      <h1>Todo App</h1>
 
       <!-- Form to Add Item -->
       <form class="crud-form">
